--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.1"
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1",
+    "ws": "^8.18.3"
   },
   "type": "module",
   "scripts": {
