--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "redis": "^5.5.6",
     "ws": "^8.18.3"
   },
   "type": "module",
